add DeutshceBank API ops

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,4 +24,11 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.4.0'
     provided 'org.projectlombok:lombok:1.12.6'
+    compile 'org.springframework.android:spring-android-rest-template:2.0.0.M3'
+}
+
+repositories {
+    maven {
+        url 'https://repo.spring.io/libs-milestone'
+    }
 }
