--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".CreateTripActivity" />
+        <activity android:name=".TripActivity"></activity>
     </application>
 
 </manifest>
