--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,15 +8,15 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".TripListActivity">
+        <activity android:name=".activity.TripListActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".CreateTripActivity" />
-        <activity android:name=".TripActivity"></activity>
+        <activity android:name=".activity.CreateTripActivity" />
+        <activity android:name=".activity.TripActivity"></activity>
     </application>
 
 </manifest>
