Remove constructor anotations

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".activity.CreateTripActivity" />
-        <activity android:name=".activity.TripActivity"></activity>
+        <activity android:name=".activity.TripActivity" />
     </application>
 
 </manifest>
