--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,8 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "25.0.2"
+    buildToolsVersion "23.0.3"
+    //buildToolsVersion "25.0.2"
 
     defaultConfig {
         applicationId "dev.paytrack.paytrack"
