--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,21 +25,16 @@
             android:label="@string/app_name"
             android:theme="@style/AppTheme"></activity>
 
-        <activity android:name=".AuthenticationActivity">
+        <activity android:name=".activity.AuthenticationActivity">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
                 <data
                     android:host="bienepaytrack.dev"
-                    android:scheme="paytrack" />
+                    android:scheme="http" />
             </intent-filter>
         </activity>
-
-        <activity
-            android:name=".activity.AuthenticationActivity"
-            android:label="@string/title_activity_authentication"
-            android:theme="@style/AppTheme"></activity>
     </application>
 
 </manifest>
